--- a/todo.txt
+++ b/todo.txt
@@ -2,11 +2,9 @@ look into songza and fix er up
 
 ======== upload
 
-make terms about and contact do something
+make contact form do something
 
-add "share this playlist" link
-
-convert gif to png when tagging
+convert gif to png when tagging (or safely refuse)
 
 ======== TRANSFER TO OMGCATZ.COM
 
